Worked on OKB user authentication (#1167)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4298 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.OKB.DataAccess/3.3/app.config
+++ b/sources/HeuristicLab.Services.OKB.DataAccess/3.3/app.config
@@ -3,6 +3,8 @@
   <configSections>
   </configSections>
   <connectionStrings>
-    <add name="HeuristicLab.OKB.DataStore.Properties.Settings.OKBConnectionString" connectionString="Data Source=localhost;Initial Catalog=OKB;Integrated Security=True" providerName="System.Data.SqlClient"/>
+    <add name="HeuristicLab.Services.OKB.DataAccess.Properties.Settings.OKBConnectionString"
+         connectionString="Data Source=localhost;Initial Catalog=HeuristicLab.OKB;Integrated Security=SSPI"
+         providerName="System.Data.SqlClient" />
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
