--- a/sources/HeuristicLab.Services.OKB.Server/3.3/app.config
+++ b/sources/HeuristicLab.Services.OKB.Server/3.3/app.config
@@ -1,62 +1,86 @@
 <?xml version="1.0"?>
 <configuration>
+  <connectionStrings>
+    <add name="HeuristicLab.Authentication"
+         connectionString="data source=localhost;Integrated Security=SSPI;Initial Catalog=HeuristicLab.Authentication"/>
+    <add name="HeuristicLab.Services.OKB.DataAccess.Properties.Settings.OKBConnectionString"
+         connectionString="Data Source=localhost;Initial Catalog=HeuristicLab.OKB;Integrated Security=SSPI"
+         providerName="System.Data.SqlClient" />
+  </connectionStrings>
+
+  <system.web>
+    <authentication mode="Forms" />
+    <compilation debug="true" targetFramework="4.0" />
+
+    <membership>
+      <providers>
+        <clear/>
+        <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="HeuristicLab.Authentication"
+             enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
+             maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
+             applicationName="HeuristicLab.Authentication" />
+      </providers>
+    </membership>
+
+    <roleManager enabled="true">
+      <providers>
+        <clear/>
+        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="HeuristicLab.Authentication" applicationName="HeuristicLab.Authentication" />
+      </providers>
+    </roleManager>
+  </system.web>
+
   <system.serviceModel>
     <bindings>
       <netTcpBinding>
         <binding name="LargeMessages" openTimeout="00:00:30" receiveTimeout="00:00:30" sendTimeout="00:00:30" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
-          <security mode="Transport">
-            <transport clientCredentialType="Certificate" protectionLevel="EncryptAndSign"/>            
+          <security mode="Message">
+            <message clientCredentialType="UserName"/>
           </security>
           <readerQuotas maxArrayLength="2147483647"/>
           <reliableSession inactivityTimeout="00:00:30" enabled="false"/>
         </binding>
       </netTcpBinding>
     </bindings>
+
     <client/>
+
     <behaviors>
       <serviceBehaviors>
         <behavior name="OKBServiceBehaviour">
           <serviceMetadata httpGetEnabled="false"/>
           <serviceDebug includeExceptionDetailInFaults="true"/>
+          <serviceAuthorization principalPermissionMode="UseAspNetRoles"
+                                roleProviderName="AspNetSqlRoleProvider" />
+          <serviceCredentials>
+            <serviceCertificate findValue="localhost" x509FindType="FindBySubjectName" />
+            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
+                                    membershipProviderName="AspNetSqlMembershipProvider"/>
+          </serviceCredentials>
         </behavior>
       </serviceBehaviors>
     </behaviors>
+
     <services>
-      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.OKB.RunnerService">
+      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.Services.OKB.RunnerService">
         <endpoint address="net.tcp://localhost:8001/OKB/Runner.svc/mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
-        <endpoint address="net.tcp://localhost:8001/OKB/Runner.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.OKB.IRunnerService">
-          <identity>
-            <dns value="HEAL"/>
-          </identity>
-        </endpoint>
+        <endpoint address="net.tcp://localhost:8001/OKB/Runner.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.Services.OKB.IRunnerService"/>
       </service>
-      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.OKB.AdminService">
+      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.Services.OKB.AdminService">
         <endpoint address="net.tcp://localhost:8001/OKB/Admin.svc/mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
-        <endpoint address="net.tcp://localhost:8001/OKB/Admin.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.OKB.IAdminService"/>
+        <endpoint address="net.tcp://localhost:8001/OKB/Admin.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.Services.OKB.IAdminService"/>
       </service>
-      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.OKB.TableService">
+      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.Services.OKB.TableService">
         <endpoint address="net.tcp://localhost:8001/OKB/Table.svc/mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
-        <endpoint address="net.tcp://localhost:8001/OKB/Table.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.OKB.ITableService">
-          <identity>
-            <dns value="HEAL"/>
-          </identity>
-        </endpoint>
+        <endpoint address="net.tcp://localhost:8001/OKB/Table.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.Services.OKB.ITableService"/>
       </service>
-      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.OKB.QueryService">
+      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.Services.OKB.QueryService">
         <endpoint address="net.tcp://localhost:8001/OKB/Query.svc/mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
-        <endpoint address="net.tcp://localhost:8001/OKB/Query.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.OKB.IQueryService">
-          <identity>
-            <dns value="HEAL"/>
-          </identity>
-        </endpoint>
+        <endpoint address="net.tcp://localhost:8001/OKB/Query.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.Services.OKB.IQueryService"/>
       </service>
-      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.OKB.DataService">
+      <service behaviorConfiguration="OKBServiceBehaviour" name="HeuristicLab.Services.OKB.DataService">
         <endpoint address="net.tcp://localhost:8001/OKB/Data.svc/mex" binding="mexTcpBinding" contract="IMetadataExchange"/>
-        <endpoint address="net.tcp://localhost:8001/OKB/Data.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.OKB.IDataService">
-          <identity>
-            <dns value="HEAL"/>
-          </identity>
-        </endpoint>
+        <endpoint address="net.tcp://localhost:8001/OKB/Data.svc" binding="netTcpBinding" bindingConfiguration="LargeMessages" contract="HeuristicLab.Services.OKB.IDataService"/>
       </service>
     </services>
   </system.serviceModel>
