Worked on configuration of deployment service (#1165)
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4307 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.Deployment/3.3/App.config
+++ b/sources/HeuristicLab.Services.Deployment/3.3/App.config
@@ -90,21 +90,31 @@
     </diagnostics>
     <services>
       <service behaviorConfiguration="HeuristicLab.Services.Deployment.UpdateBehavior"
-       name="HeuristicLab.Services.Deployment.Update">
+        name="HeuristicLab.Services.Deployment.Update">
         <endpoint address="" behaviorConfiguration="SerializationBehavior"
-         binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
-         contract="HeuristicLab.Services.Deployment.IUpdate" />
+          binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
+          contract="HeuristicLab.Services.Deployment.IUpdate" />
         <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding"
-         contract="IMetadataExchange" />
+          contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/Deployment-3.3/Update" />
+          </baseAddresses>
+        </host>
       </service>
       <service behaviorConfiguration="HeuristicLab.Services.Deployment.AdminBehavior"
-       name="HeuristicLab.Services.Deployment.Admin">
+        name="HeuristicLab.Services.Deployment.Admin">
         <endpoint address="" behaviorConfiguration="SerializationBehavior"
-         binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
-         contract="HeuristicLab.Services.Deployment.IAdmin" />
+          binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding"
+          contract="HeuristicLab.Services.Deployment.IAdmin" />
         <endpoint address="mex" behaviorConfiguration="SerializationBehavior"
-         binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding"
-         contract="IMetadataExchange" />
+          binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding"
+          contract="IMetadataExchange" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/Deployment-3.3/Admin" />
+          </baseAddresses>
+        </host>
       </service>
     </services>
     <behaviors>
@@ -118,7 +128,7 @@
           <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
           <serviceCredentials>
-            <serviceCertificate findValue="services.heuristiclab.com" storeLocation="LocalMachine"
+            <serviceCertificate findValue="localhost" storeLocation="LocalMachine"
              storeName="My" x509FindType="FindBySubjectName" />
             <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
              membershipProviderName="AspNetSqlMembershipProvider" />
@@ -130,7 +140,7 @@
           <serviceMetadata httpGetEnabled="true" />
           <serviceDebug includeExceptionDetailInFaults="false" />
           <serviceCredentials>
-            <serviceCertificate findValue="services.heuristiclab.com" storeLocation="LocalMachine"
+            <serviceCertificate findValue="localhost" storeLocation="LocalMachine"
              storeName="My" x509FindType="FindBySubjectName" />
             <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
              membershipProviderName="AspNetSqlMembershipProvider" />
