--- a/sources/HeuristicLab.Services.OKB/3.3/app.config
+++ b/sources/HeuristicLab.Services.OKB/3.3/app.config
@@ -2,77 +2,131 @@
 <configuration>
   <connectionStrings>
     <add name="HeuristicLab.Authentication"
-         connectionString="data source=localhost;Integrated Security=SSPI;Initial Catalog=HeuristicLab.Authentication"/>
+         connectionString="data source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=HeuristicLab.Authentication" />
     <add name="HeuristicLab.Services.OKB.DataAccess.Properties.Settings.OKBConnectionString"
-         connectionString="Data Source=localhost;Initial Catalog=HeuristicLab.OKB;Integrated Security=SSPI"
-         providerName="System.Data.SqlClient" />
+         connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=HeuristicLab.OKB" />
   </connectionStrings>
 
   <system.web>
-    <authentication mode="Forms" />
-    <compilation debug="true" targetFramework="4.0" />
-
     <membership>
       <providers>
-        <clear/>
+        <clear />
         <add name="AspNetSqlMembershipProvider" type="System.Web.Security.SqlMembershipProvider" connectionStringName="HeuristicLab.Authentication"
              enablePasswordRetrieval="false" enablePasswordReset="true" requiresQuestionAndAnswer="false" requiresUniqueEmail="false"
              maxInvalidPasswordAttempts="5" minRequiredPasswordLength="6" minRequiredNonalphanumericCharacters="0" passwordAttemptWindow="10"
              applicationName="HeuristicLab.Authentication" />
       </providers>
     </membership>
-
     <roleManager enabled="true">
       <providers>
-        <clear/>
-        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="HeuristicLab.Authentication" applicationName="HeuristicLab.Authentication" />
+        <clear />
+        <add name="AspNetSqlRoleProvider" type="System.Web.Security.SqlRoleProvider" connectionStringName="HeuristicLab.Authentication"
+             applicationName="HeuristicLab.Authentication" />
       </providers>
     </roleManager>
   </system.web>
 
   <system.serviceModel>
     <bindings>
-      <netTcpBinding>
-        <binding name="LargeMessages" openTimeout="00:00:30" receiveTimeout="00:00:30" sendTimeout="00:00:30" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+      <mexHttpBinding>
+        <binding name="DefaultMexHttpBinding" />
+      </mexHttpBinding>
+      <wsHttpBinding>
+        <binding name="DefaultWsHttpBinding">
           <security mode="Message">
-            <message clientCredentialType="UserName"/>
+            <message clientCredentialType="UserName" />
           </security>
-          <readerQuotas maxArrayLength="2147483647"/>
-          <reliableSession inactivityTimeout="00:00:30" enabled="false"/>
+        </binding>
+      </wsHttpBinding>
+      <netTcpBinding>
+        <binding name="DefaultNetTcpBinding" openTimeout="00:00:30" receiveTimeout="00:00:30" sendTimeout="00:00:30" maxBufferSize="2147483647" maxReceivedMessageSize="2147483647">
+          <security mode="Message">
+            <message clientCredentialType="UserName" />
+          </security>
+          <readerQuotas maxArrayLength="2147483647" />
+          <reliableSession inactivityTimeout="00:00:30" enabled="false" />
         </binding>
       </netTcpBinding>
     </bindings>
 
-    <client/>
-
     <behaviors>
       <serviceBehaviors>
-        <behavior name="AdminServiceBehaviour">
+        <behavior name="DefaultServiceBehavior">
           <serviceMetadata httpGetEnabled="true" />
-          <serviceDebug includeExceptionDetailInFaults="true"/>
-          <serviceAuthorization principalPermissionMode="UseAspNetRoles"
-                                roleProviderName="AspNetSqlRoleProvider" />
+          <serviceDebug includeExceptionDetailInFaults="true" />
+          <serviceAuthorization principalPermissionMode="UseAspNetRoles" roleProviderName="AspNetSqlRoleProvider" />
           <serviceCredentials>
             <serviceCertificate findValue="localhost" x509FindType="FindBySubjectName" />
-            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider"
-                                    membershipProviderName="AspNetSqlMembershipProvider"/>
+            <userNameAuthentication userNamePasswordValidationMode="MembershipProvider" membershipProviderName="AspNetSqlMembershipProvider" />
           </serviceCredentials>
         </behavior>
       </serviceBehaviors>
     </behaviors>
 
     <services>
-      <service behaviorConfiguration="AdminServiceBehaviour" name="HeuristicLab.Services.OKB.AdminService">
-        <endpoint address="mex" binding="mexHttpBinding" contract="IMetadataExchange" />
-        <endpoint binding="netTcpBinding" bindingConfiguration="LargeMessages"
-          contract="HeuristicLab.Services.OKB.IAdminService" />
+      <service name="HeuristicLab.Services.OKB.AdminService" behaviorConfiguration="DefaultServiceBehavior">
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+        <endpoint binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding" contract="HeuristicLab.Services.OKB.IAdminService" />
+        <endpoint binding="netTcpBinding" bindingConfiguration="DefaultNetTcpBinding" contract="HeuristicLab.Services.OKB.IAdminService" />
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost:8732/Design_Time_Addresses/OKB/AdminService/" />
-            <add baseAddress="net.tcp://localhost:8733/OKB/AdminService/" />
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/OKB-3.3/AdminService" />
+            <add baseAddress="net.tcp://localhost:8733/OKB-3.3/AdminService" />
+          </baseAddresses>
+        </host>
+      </service>
+
+      <service name="HeuristicLab.Services.OKB.TableService" behaviorConfiguration="DefaultServiceBehavior">
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+        <endpoint binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding" contract="HeuristicLab.Services.OKB.ITableService" />
+        <endpoint binding="netTcpBinding" bindingConfiguration="DefaultNetTcpBinding" contract="HeuristicLab.Services.OKB.ITableService" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/OKB-3.3/TableService" />
+            <add baseAddress="net.tcp://localhost:8733/OKB-3.3/TableService" />
+          </baseAddresses>
+        </host>
+      </service>
+
+      <service name="HeuristicLab.Services.OKB.DataService" behaviorConfiguration="DefaultServiceBehavior">
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+        <endpoint binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding" contract="HeuristicLab.Services.OKB.IDataService" />
+        <endpoint binding="netTcpBinding" bindingConfiguration="DefaultNetTcpBinding" contract="HeuristicLab.Services.OKB.IDataService" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/OKB-3.3/DataService" />
+            <add baseAddress="net.tcp://localhost:8733/OKB-3.3/DataService" />
+          </baseAddresses>
+        </host>
+      </service>
+
+      <service name="HeuristicLab.Services.OKB.RunnerService" behaviorConfiguration="DefaultServiceBehavior">
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+        <endpoint binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding" contract="HeuristicLab.Services.OKB.IRunnerService" />
+        <endpoint binding="netTcpBinding" bindingConfiguration="DefaultNetTcpBinding" contract="HeuristicLab.Services.OKB.IRunnerService" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/OKB-3.3/RunnerService" />
+            <add baseAddress="net.tcp://localhost:8733/OKB-3.3/RunnerService" />
+          </baseAddresses>
+        </host>
+      </service>
+
+      <service name="HeuristicLab.Services.OKB.QueryService" behaviorConfiguration="DefaultServiceBehavior">
+        <endpoint address="mex" binding="mexHttpBinding" bindingConfiguration="DefaultMexHttpBinding" contract="IMetadataExchange" />
+        <endpoint binding="wsHttpBinding" bindingConfiguration="DefaultWsHttpBinding" contract="HeuristicLab.Services.OKB.IQueryService" />
+        <endpoint binding="netTcpBinding" bindingConfiguration="DefaultNetTcpBinding" contract="HeuristicLab.Services.OKB.IQueryService" />
+        <host>
+          <baseAddresses>
+            <add baseAddress="http://localhost:8732/Design_Time_Addresses/OKB-3.3/QueryService" />
+            <add baseAddress="net.tcp://localhost:8733/OKB-3.3/QueryService" />
           </baseAddresses>
         </host>
       </service>
     </services>
   </system.serviceModel>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
+
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0" />
+  </startup>
+</configuration>
