--- a/sources/HeuristicLab.Services.OKB.DataAccess/3.3/app.config
+++ b/sources/HeuristicLab.Services.OKB.DataAccess/3.3/app.config
@@ -4,7 +4,7 @@
   </configSections>
   <connectionStrings>
     <add name="HeuristicLab.Services.OKB.DataAccess.Properties.Settings.OKBConnectionString"
-         connectionString="Data Source=localhost;Initial Catalog=HeuristicLab.OKB;Integrated Security=SSPI"
+         connectionString="Data Source=.\SQLEXPRESS;Integrated Security=SSPI;Initial Catalog=HeuristicLab.OKB"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.0"/></startup></configuration>
