Worked on OKB data model and services (#1174).
git-svn-id: https://src.heuristiclab.com/svn/core/trunk@4381 2abd9481-f8db-48e9-bd25-06bc13291c1b

--- a/sources/HeuristicLab.Services.OKB/3.3/HeuristicLab.Services.OKB-3.3.csproj
+++ b/sources/HeuristicLab.Services.OKB/3.3/HeuristicLab.Services.OKB-3.3.csproj
@@ -127,11 +127,15 @@
     <Compile Include="Interfaces\IAdminService.cs" />
     <Compile Include="Interfaces\IDataService.cs" />
     <Compile Include="Interfaces\IQueryService.cs" />
-    <Compile Include="Interfaces\IRunnerService.cs" />
+    <Compile Include="Interfaces\IRunnerService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="Interfaces\ITableService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="QueryService.cs" />
-    <Compile Include="RunnerService.cs" />
+    <Compile Include="RunnerService.cs">
+      <SubType>Code</SubType>
+    </Compile>
     <Compile Include="StarterKit.cs" />
     <Compile Include="TableService.cs" />
   </ItemGroup>
